--- a/style.css
+++ b/style.css
@@ -1,10 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-:root{
---cor-principal:#ffe6ff;
---cor-escuro:#51424e;
---cor-secundario:#ce42bb;
---cor-amarelo:#f9f871;
---cor-azul:#7779ff;
---cor-rosa:#ff77eda4;
---cor-beje:#ddd7c6;
+
+:root {
+    --cor-principal: #ffe6ff;
+    --cor-escuro: #51424e;
+    --cor-secundario: #ce42bb;
+    --cor-amarelo: #f9f871;
+    --cor-azul: #7779ff;
+    --cor-rosa: #ff77eda4;
+    --cor-beje: #ddd7c6;
+}
+
+#body {
+    background-color: var(--cor-muitoclaro);
+}
+
+#rodape {
+    background-color: var(--cor-escuro);
+    color: var(--cor-branco);
+}
+
+#ancora {
+    text-decoration: none;
+    color: var(--cor-branco);
+    font-size: 18px;
+    transition: color 0.3s ease;
+
+}
+
+#ancora:hover {
+    color: var(--cor-branco);
+    cursor: pointer;
+    text-decoration: underline;
+
+}
+
+.habilidades {
+    text-decoration: none;
 }
