--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Condensed:wght@300;400;700&display=swap');
 
 :root {
-    --cor-principal: hsl(244, 59%, 64%);
-    --cor-escura: #354b45;
-    --cor-cinza: #98b0a9;
-    --cor-lilas: hsl(234, 92%, 74%);
-    --cor-preto: #000000;
-    --cor-branco: #FFFFFF;
+    --cor-principal: #ffe6ff;
+    --cor-escuro: #51424e;
+    --cor-secundario: #ce42bb;
+    --cor-amarelo: #f9f871;
+    --cor-azul: #7779ff;
+    --cor-rosa: #ff77eda4;
+    --cor-beje: #ddd7c6;
 }
 
 #body {
-    background-color: var(--cor-azulclaro);
+    background-color: var(--#ffe6ff);
 }
 
 #rodape {
@@ -20,10 +21,11 @@
 
 #ancora {
     text-decoration: none;
-    color: var(--cor-branco);
+    color: var(--cor-vermelh);
     font-size: 20px;
-    transition:  color 0.3s ease;
+    transition: color 0.3s ease;
 }
+
 #ancora:hover {
     color: var(--cor-principal);
     cursor: pointer;
